<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:padding="24dp">

    <FrameLayout
        android:id="@+id/check_container"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/circle_background"
        app:layout_constraintBottom_toTopOf="@+id/tv_cuenta_creada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@android:drawable/checkbox_on_background"
            app:tint="@color/button_blue" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_cuenta_creada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cuenta_creada"
        android:textColor="@color/button_blue"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_registro_exitoso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_container" />

    <TextView
        android:id="@+id/tv_registro_exitoso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/registro_exitoso"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ir_login_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cuenta_creada" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ir_login_final"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/boton_redondo"
        android:text="Iniciar Sesión ➔"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_volver_inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registro_exitoso" />

    <TextView
        android:id="@+id/tv_volver_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/volver_inicio"
        android:textColor="@color/gris_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ir_login_final" />

</androidx.constraintlayout.widget.ConstraintLayout>
